deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "app.gitlab.com/app": CI_PROJECT_PATH_SLUG
    "app.gitlab.com/env": CI_ENVIRONMENT_SLUG
  labels:
    application: CI_ENVIRONMENT_SLUG
    release: CI_ENVIRONMENT_SLUG
  name: foo
spec:
  selector:
    matchLabels:
      application: CI_ENVIRONMENT_SLUG
      release: CI_ENVIRONMENT_SLUG
  template:
    metadata:
      annotations:
        "app.gitlab.com/app": CI_PROJECT_PATH_SLUG
        "app.gitlab.com/env": CI_ENVIRONMENT_SLUG
      labels:
        application: CI_ENVIRONMENT_SLUG
        release: CI_ENVIRONMENT_SLUG
    spec:
      containers:
      - name: foo
        image: IMAGE
        imagePullPolicy: Always
      imagePullSecrets:
        - name: gitlab-registry
